--- a/history.html
+++ b/history.html
@@ -14,22 +14,23 @@
 
 <!--Nav-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Logo</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
-            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="container-fluid row">
+        <a class="navbar-brand col-3" href="index.html">Logo</a>
+        <button class="navbar-toggler" id="collapse-button" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <div class="collapse navbar-collapse row" id="navbarTogglerDemo02">
+            <ul id="nav-list" class="navbar-nav mb-2 mb-lg-0 col-6">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="history.html">History</a>
+                    <a class="nav-link" href="history.html">History</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="shopping.html">Shopping</a>
@@ -38,7 +39,10 @@
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
-            <i class="bi bi-basket2-fill" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>
+            <div id="nav-basket" class="col-3">
+                <i class="bi bi-basket2-fill" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>
+            </div>
+
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
                 <div class="modal-dialog">
@@ -60,6 +64,7 @@
         </div>
     </div>
 </nav>
+
 <main>
 
     <!-----------Hero Section-->
