--- a/about.html
+++ b/about.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-
+<body>
+    
 <!--Nav-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid row">
@@ -73,9 +74,9 @@
 
 </main>
 
-<body>
-
-
+<footer class="container-fluid">
+    <p>&copy; <span id="year"></span> Swords Tourism</p>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
