--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse row" id="navbarTogglerDemo02">
             <ul id="nav-list" class="navbar-nav mb-2 mb-lg-0 col-6">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="shopping.html">Shopping</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link active" href="contact.html">Contact</a>
                 </li>
             </ul>
             <div id="nav-basket" class="col-3">
