--- a/history.html
+++ b/history.html
@@ -25,13 +25,13 @@
             <div class="collapse navbar-collapse row" id="navbarTogglerDemo02">
                 <ul id="nav-list" class="navbar-nav mb-2 mb-lg-0 col-6">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="history.html">History</a>
+                        <a class="nav-link active" href="history.html">History</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="shopping.html">Shopping</a>
