--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -16,15 +17,15 @@
 
     <!--Nav-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid row">
-            <a class="navbar-brand col-3" href="index.html">Logo</a>
+        <div class="container-fluid">
+            <a class="navbar-brand col-4" href="index.html">Logo</a>
             <button class="navbar-toggler" id="collapse-button" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse row" id="navbarTogglerDemo02">
-                <ul id="nav-list" class="navbar-nav mb-2 mb-lg-0 col-6">
+            <div class="collapse navbar-collapse col-4" id="navbarTogglerDemo02">
+                <ul id="nav-list" class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
@@ -41,7 +42,7 @@
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
-                <div id="nav-basket" class="col-3">
+                <div id="nav-basket" class="col-4">
                     <i class="bi bi-basket2-fill" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>
                 </div>
 
@@ -71,8 +72,98 @@
     <main>
 
         <!-----------Hero Section-->
-        <section id="hero-section" class="container-fluid">
-            <img id="hero-image" src="hero-placeholder.jpg" alt="">
+        <section id="hero-section" class="container-fluid d-flex">
+            <div id="hero-text" class="col-lg-5  offset-1 col-7">
+                <h1 class="pt-2 ps-3">
+                    Come See Swords...
+                </h1>
+                <h3 class="pt-2 ps-3">
+                    Some subheading that is a bit longer
+                    </h2>
+            </div>
+            <div id="scroller-arrow" class="d-flex align-items-end mb-2 fs-1">
+                <a href="#home-about-section"><i class="bi bi-chevron-double-down"></i></a>
+            </div>
+        </section>
+
+        <section id="home-about-section" class="text-center">
+            <h1 id="home-about-heading">About Swords</h1>
+            <p id="home-about-p" class="col-lg-6 offset-lg-3 col-md-9 mt-3">
+                Nestled just north of Dublin, Swords combines historic charm with a lively, modern spirit. From the
+                impressive Swords Castle to bustling local markets and scenic green spaces, this vibrant town offers a
+                unique mix of history, culture, and community. Perfect for day-trippers and explorers alike, Swords is
+                your starting point for discovering the heart of North County Dublin.
+            </p>
+        </section>
+
+        <section id="home-cards-section" class="pt-5">
+            <div class="row pt-5">
+                <div class="col-12 col-md-4 text-center d-flex justify-content-center" data-aos="fade-up">
+                    <div class="card d-flex justify-content-center mb-5" style="width: 18rem;">
+                        <img src="assets/images/thumbnail-placeholder-.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">History</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk of
+                                the card's content.</p>
+                            <a href="history.html" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 text-center d-flex justify-content-center" data-aos="fade-up">
+                    <div class="card d-flex justify-content-center mb-5" style="width: 18rem;">
+                        <img src="assets/images/thumbnail-placeholder-.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Shopping</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk of
+                                the card's content.</p>
+                            <a href="shopping.html" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-4 text-center d-flex justify-content-center" data-aos="fade-up">
+                    <div class="card d-flex justify-content-center mb-5" style="width: 18rem;">
+                        <img src="assets/images/thumbnail-placeholder-.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Gift Card</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the
+                                bulk of
+                                the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
+
+        <section class="d-flex flex-column text-center align-items-center">
+            <h1 class="mt-3">Contact</h1>
+            <form id="home-contact-form">
+                <div id="home-contact-form-inputs" class="d-flex mb-3">
+                    <div class="d-flex flex-column text-start me-3">
+                        <div class="mb-3 form-floating">
+                            <input type="text" class="form-control" id="name">
+                            <label for="name" class="form-label">Name</label>    
+                        </div>
+                        <div class="mb-3 form-floating">
+                            <input type="tel" class="form-control" id="phone">
+                            <label for="phone" class="form-label">Phone Number</label>
+                        </div>
+                        <div class="mb-3 form-floating">
+                            <input type="email" class="form-control" id="e-mail"
+                                aria-describedby="emailHelp">
+                            <label for="exampleInputEmail1" class="form-label">Email address</label> 
+                            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                        </div>    
+                    </div>
+                    <div class="input-group ms-3">
+                        <textarea class="form-control" aria-label="With textarea" placeholder="Enter your message here..."></textarea>
+                    </div>
+                </div>
+               <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
         </section>
 
     </main>
@@ -93,6 +184,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
     <script src="assets/js/script.js"></script>
 </body>
 
