--- a/about.html
+++ b/about.html
@@ -11,72 +11,132 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-    
-<!--Nav-->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid row">
-        <a class="navbar-brand col-3" href="index.html">Logo</a>
-        <button class="navbar-toggler" id="collapse-button" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse row" id="navbarTogglerDemo02">
-            <ul id="nav-list" class="navbar-nav mb-2 mb-lg-0 col-6">
-                <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="history.html">History</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="shopping.html">Shopping</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-            </ul>
-            <div id="nav-basket" class="col-3">
-                <i class="bi bi-basket2-fill" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>
-            </div>
 
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            ...
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
+<body>
+
+    <!--Nav-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand col-4" href="index.html">Logo</a>
+            <button class="navbar-toggler" id="collapse-button" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse col-4" id="navbarTogglerDemo02">
+                <ul id="nav-list" class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="history.html">History</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="shopping.html">Shopping</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+                <div id="nav-basket" class="col-4">
+                    <i class="bi bi-basket2-fill" data-bs-toggle="modal" data-bs-target="#exampleModal"></i>
+                </div>
+
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                ...
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</nav>
-<main>
+    </nav>
 
-    <!-----------Hero Section-->
-    <section id="hero-section" class="container-fluid">
-        <img id="hero-image" src="hero-placeholder.jpg" alt="">
-    </section>
+    <main>
 
-</main>
+        <section id="hero-section" class="container-fluid d-flex">
+            <div id="hero-text" class="col-lg-5  offset-1 col-7">
+                <h1 class="pt-2 ps-3">
+                    Swords
+                </h1>
+                <h3 class="pt-2 ps-3">
+                    Explore the Charm, Heritage, and Local Life of Swords — Gem of North Dublin
+                </h3>
+            </div>
+            <div id="scroller-arrow" class="d-flex align-items-end mb-2 fs-1">
+                <a href="#home-about-section"><i class="bi bi-chevron-double-down"></i></a>
+            </div>
+        </section>
+        <h3 class="pt-5 text-center">
+            Just north of Dublin, Swords combines historic charm with modern energy. Explore Swords Castle, scenic
+            parks, and vibrant local culture—an ideal gateway to North County Dublin.
+        </h3>
+        <div class="row justify-content-center">
+                <div class="col-9 col-md-4 mb-5">
+                    <div class="card bg-dark text-white">
+                        <img src="..." class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Last updated 3 mins ago</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-9 col-md-4 mb-5">
+                    <div class="card bg-dark text-white">
+                        <img src="..." class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Last updated 3 mins ago</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-9 col-md-4 mb-5">
+                    <div class="card bg-dark text-white">
+                        <img src="..." class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Last updated 3 mins ago</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <section>
 
-<footer class="container-fluid">
-    <p>&copy; <span id="year"></span> Swords Tourism</p>
-</footer>
+        </section>
+
+        <section>
+
+        </section>
+
+
+    </main>
+
+    <footer class="container-fluid">
+        <p>&copy; <span id="year"></span> Swords Tourism</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
