add alt text to imgs

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="row pt-5">
                 <div class="col-12 col-md-4 text-center d-flex justify-content-center" data-aos="fade-up">
                     <div class="card d-flex justify-content-center mb-5" style="width: 18rem;">
-                        <img src="assets/images/swords-church.jpg" class="card-img-top home-card-img" alt="...">
+                        <img src="assets/images/swords-church.jpg" class="card-img-top home-card-img" alt="Church in Swords Castle">
                         <div class="card-body">
                             <h5 class="card-title">History</h5>
                             <p class="card-text">Discover Swords’ rich past, from ancient castles and heritage sites to tales of Ireland’s storied history woven into every corner.</p>
@@ -169,7 +169,7 @@
                 </div>
                 <div class="col-12 col-md-4 text-center d-flex justify-content-center" data-aos="fade-up">
                     <div class="card d-flex justify-content-center mb-5" style="width: 18rem;">
-                        <img src="assets/images/pavilions thumbnail.jpg" class="card-img-top home-card-img" alt="...">
+                        <img src="assets/images/pavilions thumbnail.jpg" class="card-img-top home-card-img" alt="Swords pavilions Logo">
                         <div class="card-body">
                             <h5 class="card-title">Shopping</h5>
                             <p class="card-text">Explore shopping destinations in Swords, from high-street brands to local boutiques, offering something special for everyone.</p>
@@ -179,7 +179,7 @@
                 </div>
                 <div class="col-12 col-md-4 text-center d-flex justify-content-center" data-aos="fade-up">
                     <div class="card d-flex justify-content-center mb-5" style="width: 18rem;">
-                        <img src="assets/images/gift-card.jpg" class="card-img-top home-card-img" alt="...">
+                        <img src="assets/images/gift-card.jpg" class="card-img-top home-card-img" alt="Swords Gift card">
                         <div class="card-body">
                             <h5 class="card-title">Gift Card</h5>
                             <p class="card-text">Treat someone to a memorable experience in Swords with gift cards for shopping, dining, and local attractions.</p>
